# fastapi-tortoiseorm

./: Makefile  README.md  db.sqlite3  pyproject.toml  run.py
app/: filter_sort_search.py  main.py  models.py  pagination.py  settings.py
app/managers/: __init__.py  tournament_manager.py
app/schemas/: __init__.py  events.py  tournaments.py
migrations/models/: 0_20260211214721_init.py
